Numbers in square brackets ([]) are tracker items on SourceForge with patch
or info related to the entry. <http://sourceforge.net/projects/vpopmail/>

5.5.0 - Current
  Matt Brookings
  - Fixed vchkpw calling strstr with NULL value
  - Fixed some slight output issues and test issues in configure.ac
  - Fixed a small build bug with cdb
  - Updated vusaged subdirectory to use main source tree's copy of storage.h
  - Fixed a number of issues with FreeBSD detection of endian and handling of 64bit values
  - Fixed some pthreads detection issues on FreeBSD
  - Renamed variable that is pre-defined in Solaris
  - Fixed quota/limits comparison
  - Updated build scripts considerably
  - Updated to build vusaged
  - Fixed some format string bugs
  - Updated config code to use VPOPMAILDIR rather than getpwnam(vpopmail)
  - New quota functions added in quota.c
  - Updated vdominfo and vuserinfo to show more detailed quota statistics and to use new quota API
  - Updated vdelivermail to use new quota API
  - Added warnings in functions that utilize old quota code to help identify changes that need to be made
  - Added new more efficient, safer alternatives to current vpopmail API to be fully replaced later
  - Updated vdeloldusers to allow option to ignore users with .qmail file
  - Updated to build and install libvpopmail.so
  - Added backend module support
  - Updated CDB module
  - Updated MySQL module
  - Updated LDAP module
  - Updated PostgreSQL module
  - Updated vuserinfo to always show usage
  - Updated vauthmodule.h to be included by vauth.h except if VAUTH_MODULE is defined
  - Defined VAUTH_MODULE under working modules
  - Updated module code to automatically call vauth_load_module and to catch calls to vauth_open and vclose
  - Fixed result comparison bug in quota_check
  - Added IP alias domain functionality to modules
  - Updated some formatting in vdominfo output in regards to alias domains
  - Updated backend module code to support valias