@@ -3,6 +3,7 @@ or info related to the entry. <http://sourceforge.net/projects/vpopmail/>
 
 5.5.0 - Current
   Matt Brookings
+  - Made yet more modifications in storage.h for htonll and ntohll compatibility
   - Fixed vchkpw calling strstr with NULL value
   - Fixed some slight output issues and test issues in configure.ac
   - Fixed a small build bug with cdb
